Descripción de los cambios

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "name": "caja",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
