--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "caja",
   "version": "1.0.0",
+  "description": "Bot de Telegram para gestión de caja chica",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["bot", "telegram", "caja chica", "heroku"],
+  "author": "Tu Nombre <tuemail@example.com>",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
     "node-telegram-bot-api": "^0.66.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
