se realiza commit de prueba con otro registro.env

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ TELEGRAM_TOKEN=7649792669:AAEV-i_mXiLt0yP2f85JVzsixeuj3jBGt2M
 APP_URL=https://caja-e71a3bcba657.herokuapp.com
 MONGODB_URI=mongodb+srv://ferchomap:EyJR3eJ1Vz5oqjSE@cluster0.xfmby.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
-SUPERVISORES_IDS=7143094298,6330970125
+SUPERVISORES_IDS=7143094298,6330970125,8007264961
