--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["bot", "telegram", "caja chica", "heroku"],
+  "keywords": [
+    "bot",
+    "telegram",
+    "caja chica",
+    "heroku"
+  ],
   "author": "Tu Nombre <tuemail@example.com>",
   "license": "ISC",
   "dependencies": {
@@ -16,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
+    "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.66.0"
   },
   "engines": {
