--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.9.0",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
     "node-cron": "^3.0.3",
