--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,22 @@
-# Telegram Bot Token
-TELEGRAM_TOKEN=tu_token_aqui
+# Telegram Bot Configuration
+BOT_TOKEN=your_telegram_bot_token
 
-# MongoDB Connection URI
-MONGODB_URI=mongodb+srv://user:password@cluster.mongodb.net/database?retryWrites=true&w=majority
+# Database Configuration
+DATABASE_URL="postgresql://username:password@localhost:5432/caja_chica?schema=public"
 
-# Application URL (generated automatically in Railway)
-APP_URL=https://tu-app.railway.app
+# MongoDB (mantener temporalmente durante migración)
+MONGODB_URI=mongodb://localhost:27017/caja
 
-# Server Port
+# App Configuration
+NODE_ENV=development
 PORT=3000
+APP_URL=https://your-app-url.com
 
-# Supervisors IDs (comma-separated)
+# Security
+JWT_SECRET=your_jwt_secret_key
+
+# Organization Configuration
+DEFAULT_ORG_SLUG=default
+
+# Legacy - Supervisors IDs (migraremos a roles)
 SUPERVISORES_IDS=123456789,987654321
