--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Tu Nombre <tuemail@example.com>",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "axios": "^1.9.0",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
@@ -24,9 +25,13 @@
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
     "node-cron": "^3.0.3",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "prisma": "^6.8.2"
   },
   "engines": {
-    "node": "16.x"
+    "node": ">=16.x"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
